--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Exploding Kittens</title>
+        <link rel="stylesheet" href="css/style.css">
+        <!-- <link rel="stylesheet" href="css/reset.css"> -->
+        <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+        <script src="js/dom.js" charset="utf-8"></script>
+
+        </script>
+
     </head>
     <body>
         <nav>
@@ -28,7 +35,7 @@
                 <a name="about">
                     <h2>About</h2>
                     <ul>
-                        <li>
+                        <!-- <li>
                             A CARD GAME FOR PEOPLE WHO ARE INTO
                         </li>
                         <li>
@@ -36,7 +43,7 @@
                         </li>
                         <li>
                             AND SOMETIMES GOATS
-                        </li>
+                        </li> -->
                     </ul>
                 </a>
             </div>
@@ -45,20 +52,23 @@
                 <a name="cards">
                     <h2>Cards</h2>
 
-                    <div class="card">
-                        <h3>Explode</h3>
-                        <img src="/images/explode.png">
+                    <div id="cards-container">
+                      <!-- <div class="card">
+                          <h3>Explode</h3>
+                          <img src="images/explode.png">
+                      </div> -->
+
+                      <div class="card">
+                          <h3>Defuse</h3>
+                          <img src="images/defuse.png">
+                      </div>
+
+                      <div class="card">
+                          <h3>Nope</h3>
+                          <img src="images/nope.png">
+                      </div>
                     </div>
 
-                    <div class="card">
-                        <h3>Defuse</h3>
-                        <img src="/images/defuse.png">
-                    </div>
-
-                    <div class="card">
-                        <h3>Nope</h3>
-                        <img src="/images/nope.png">
-                    </div>
                 </a>
             </div>
 
